# Controle-de-estoque-e-vendas-de-loja

./: CMakeLists.txt  CMakeLists.txt.user.c6f84c1  README.md  main.cpp
DocumentaçãoDoxygen/html1/: _projeto_final_2include_2_caixa_8hpp.html  _projeto_final_2include_2_caixa_8hpp_source.html  _projeto_final_2include_2_estoque_8hpp.html  _projeto_final_2include_2_estoque_8hpp_source.html  _projeto_final_2include_2_funcionario_8hpp.html  class_ui_1_1_exibir_estoque-members.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui_1_1_remove_produto-members.html  class_ui_1_1_remove_produto.html  class_ui_1_1_vender_produtos.html  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___c_l_ab21246f6dbd5d2ea2e5a48ee1f97dbc0.html  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___c_l_ab3a983e266b3e75e0eb0617b438951a8.html  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___c_l_acfdc6af55538d2f3d662f63714ce90de.html  ui__adcionarfuncionarios_8h.html  (+22 more)
ProjetoFinal/: CMakeLists.txt
ProjetoFinal/include/: Caixa.hpp  Estoque.hpp  Funcionario.hpp  Gerente.hpp  Produto.hpp
ProjetoFinal/interface/: AdProduto.h  adcionarfuncionarios.cpp  adcionarfuncionarios.h  adproduto.cpp  adproduto.ui  dadosdevenda.cpp  exibirdadosdevenda.cpp  exibirdadosdevenda.ui  exibirestoque.cpp  exibirestoque.h  exibirestoque.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  produto.cpp  produto.h  produto.ui  removeproduto.cpp  removeproduto.h  removeproduto.ui  venderprodutos.cpp  venderprodutos.h  venderprodutos.ui
ProjetoFinal/src/: Caixa.cpp  Estoque.cpp  Funcionario.cpp  Pedido.cpp  Produto.cpp
build-ProjetoFinal-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
include/: Caixa.hpp  Estoque.hpp  Funcionario.hpp  Gerente.hpp  Pedido.hpp  Produto.hpp
interface/: AdProduto.h  adcionarfuncionarios.cpp  adcionarfuncionarios.ui  adproduto.cpp  adproduto.ui  dadosdevenda.cpp  dadosdevenda.h  dadosdevenda.ui  exibirdadosdevenda.h  exibirestoque.cpp  exibirestoque.h  exibirestoque.ui  main.cpp  mainwindow.cpp  mainwindow.ui  removeproduto.cpp  venderprodutos.cpp  venderprodutos.h
src/: Caixa.cpp  Estoque.cpp  Funcionario.cpp  Gerente.cpp  Pedido.cpp  Produto.cpp  main.cpp
(+426 files in other folders)
